# yolo26-analytics

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-03-28-yolo26-analytics.md
docs/superpowers/specs/: 2026-03-28-safewatch-design.md
examples/: custom_detector.py  ppe_safety.py  quickstart.py  rtsp_warehouse.py  video_analytics.py
notebooks/: demo.ipynb
tests/: conftest.py  test_analytics.py  test_cli.py  test_config.py  test_detection.py  test_export.py  test_models.py  test_pipeline.py  test_sahi.py  test_sources.py  test_store.py  test_tracking.py
tests/test_alerts/: test_manager.py
tests/test_dashboard/: test_api.py
tests/test_zones/: test_counting.py  test_dwell.py  test_entry_exit.py  test_polygon.py  test_throughput.py
yolo26_analytics/: __init__.py  cli.py  models.py  protocols.py
yolo26_analytics/alerts/: __init__.py  console.py  discord.py  manager.py  mqtt.py  slack.py  telegram.py  webhook.py
yolo26_analytics/analytics/: __init__.py  heatmap.py  stats.py
yolo26_analytics/config/: __init__.py  schema.py
yolo26_analytics/core/: __init__.py  pipeline.py
yolo26_analytics/dashboard/: __init__.py  app.py
yolo26_analytics/dashboard/routes/: api.py  stream.py  views.py
yolo26_analytics/dashboard/static/: style.css
yolo26_analytics/dashboard/templates/: base.html  live.html
yolo26_analytics/detection/: __init__.py  rfdetr.py  sahi.py  yolo26.py
yolo26_analytics/export/: __init__.py  exporter.py
yolo26_analytics/sources/: __init__.py  base.py  image_dir.py  rtsp.py  video_file.py  webcam.py
yolo26_analytics/store/: __init__.py  models.py  postgres.py  retention.py  sqlite.py
yolo26_analytics/tracking/: __init__.py  bytetrack.py
yolo26_analytics/zones/: __init__.py  analyzer.py  counting.py  dwell.py  entry_exit.py  polygon.py  throughput.py
