[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yolo26-analytics"
version = "0.1.2"
description = "Real-time object tracking, zone analytics, and event alerting built on YOLO26"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Baz" }]
keywords = ["yolo", "yolo26", "object-detection", "tracking", "analytics", "zone", "heatmap", "bytetrack"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "ultralytics>=8.3.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "shapely>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "aiomqtt>=2.0.0",
    "click>=8.1.0",
    "python-multipart>=0.0.6",
    "sse-starlette>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/MohibShaikh/yolo26-analytics"
Repository = "https://github.com/MohibShaikh/yolo26-analytics"
Issues = "https://github.com/MohibShaikh/yolo26-analytics/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "testcontainers[postgres]>=3.7.0",
]
sahi = [
    "sahi>=0.11.0",
]
tensorrt = [
    "tensorrt>=8.6.0",
]
tflite = [
    "tflite-runtime>=2.14.0",
]

[project.scripts]
y26a = "yolo26_analytics.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "ultralytics.*",
    "aiomqtt.*",
    "cv2.*",
    "sse_starlette.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
